# playrec

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.md  CONTRIBUTING.md  GIT_COMMIT_MESSAGE.txt  LICENSE  README.md  build.sh
.github/: copilot-instructions.md
build-gui/: CMakeCache.txt  Makefile  cmake_install.cmake
build-gui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-gui/PlayRec-gui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-gui/PlayRec-gui_autogen/BMPI5EA7AM/: moc_capture_thread.cpp  moc_capture_thread.cpp.d  moc_main_window.cpp  moc_main_window.cpp.d  moc_preview_widget.cpp  moc_preview_widget.cpp.d  moc_settings_dialog.cpp  moc_settings_dialog.cpp.d
build-gui/PlayRec-gui_autogen/include/: main_window.moc.d
include/: audio_capture.h  capture_engine.h  common.h  encoder.h  file_writer.h  video_capture.h
include/gui/: capture_thread.h  main_window.h  preview_widget.h  settings_dialog.h
src/: audio_capture.cpp  capture_engine.cpp  encoder.cpp  encoder_old.cpp  file_writer.cpp  main.cpp  video_capture.cpp
src/gui/: capture_thread.cpp  main_gui.cpp  main_window.cpp  preview_widget.cpp  settings_dialog.cpp
